Fixed main running before form input is received, and updated lists of skillsets
Added 3 routes in flask file, 1. root route to check if flask runs , 2. Route GET to check if form is submitted, 3. Route POST to reset form submission for running program again.

Updated list of skillsets to be filtered, to cater to more jobs outside of the IT sector.

Removed certain comments as well.

--- a/ui_test.html
+++ b/ui_test.html
@@ -173,8 +173,8 @@ function submitForm(event) {
     .then(response => response.json())
     .then(data => {
         console.log('Response from Python program', data.message);
-        alert(`Form submitted successfully! Title: ${data.title}, Location: ${data.location}`);
-        //alert(`Python program processed the data! Result: ${data.result})
+        //data.data.title is because the data is nested
+        alert(`Form submitted successfully! Title: ${data.data.title}, Location: ${data.data.location}`);
     })
     .catch((error) => {
         console.error('Error:', error);
