--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: #008080;
+            background-color: #ff9e01;
             color: white;
             padding: 20px;
             text-align: center;
@@ -48,14 +48,15 @@
         }
 
         nav {
+            background-color: #000000;
+            padding: 10px;
             text-align: center;
-            margin: 20px 0;
         }
 
         nav a {
             margin: 0 15px;
             text-decoration: none;
-            color: #008080;
+            color: #ffffff;
         }
     </style>
 </head>
