added a new tab in HTML
added a new tab

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - JobScout Pro</title>
+    <link rel="icon" href="faviconv2.jpg" type="image/png">
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -13,10 +14,33 @@
         }
 
         header {
-            background-color: #ff9e01;
+            background-color: #00aeff;
             color: white;
             padding: 20px;
             text-align: center;
+        }
+                header img {
+            position: absolute;
+            top: 0px;
+            left: 850px;
+            width: 120px; /* Adjust size as needed */
+            height: auto;
+        }
+        
+        nav {
+            background-color: #ff9e01;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: white;
+        }
+
+        nav a:hover {
+            background-color: #00aeff;
         }
 
         .container {
@@ -46,28 +70,19 @@
         .team-member p {
             margin: 5px 0;
         }
-
-        nav {
-            background-color: #000000;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #ffffff;
-        }
     </style>
 </head>
 <body>
 
 <header>
     <h1>About Us</h1>
+    <img src="faviconv2.jpg" alt="Logo"> <!-- Your icon -->
 </header>
 
 <nav>
-    <a href="ui_testzx.html">Home</a> <!-- Link back to the home page -->
+    <a href="ui_testzx.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="CompanyProfile.html">Company Profile</a>
 </nav>
 
 <div class="container">
