--- a/ui_testzx.html
+++ b/ui_testzx.html
@@ -28,7 +28,7 @@
         header img {
             position: absolute;
             top: 0px;
-            left: 0px;
+            left: 850px;
             width: 120px; /* Adjust size as needed */
             height: auto;
         }
@@ -72,11 +72,18 @@
             gap: 10px;
         }
 
-        .image-container img {
+        .image-container .column {
             flex: 1 1 300px;
-            height: auto;
+            background: #f9f9f9;
+            padding: 15px;
             border-radius: 5px;
             border: 2px solid #ccc;
+        }
+
+        /* Company profile section */
+        .company-profile {
+            display: none;
+            margin-top: 20px;
         }
 
         /* Form container */
@@ -137,6 +144,7 @@
 <nav>
     <a href="#home">Home</a>
     <a href="about.html">About Us</a>
+    <a href="CompanyProfile.html">Company Profile</a>
 </nav>
 
 <div class="main-container">
@@ -155,10 +163,30 @@
     </form>
 
     <div class="image-container" id="results">
-        <!-- Images/graphs to be tested -->
-        <img src="https://via.placeholder.com/300" alt="Sample Image 1">
-        <img src="https://via.placeholder.com/300" alt="Sample Image 2">
-        <img src="https://via.placeholder.com/300" alt="Sample Image 3">
+        <div class="column">
+            <h3>Job Categories</h3>
+            <ul>
+                <li><a href="#">IT</a></li>
+                <li><a href="#">Marketing</a></li>
+                <li><a href="#">Finance</a></li>
+                <li><a href="#">Healthcare</a></li>
+                <li><a href="#">Education</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <h3>Company Profile</h3>
+            <img src="company-logo.jpg" alt="Company Logo" style="width:100%;">
+            <p>JobScout Pro is a tool to extract critical information on potential jobs.</p>
+            <a href="CompanyProfile.html">Company Profile</a>
+        </div>
+        <div class="column">
+            <h3>FAQs</h3>
+            <ul>
+                <li><strong>What is JobScout Pro?</strong> A platform to find and filter job opportunities.</li>
+                <li><strong>How do I apply for jobs?</strong> Use the filter above to find jobs and apply directly.</li>
+                <li><strong>Can I save my job searches?</strong> Yes, you can save searches to return to later.</li>
+            </ul>
+        </div>
     </div>
 </div>
 
@@ -237,6 +265,12 @@ function submitForm(event) {
         resultsContainer.removeChild(loadingMessage);
         alert('An error occurred: ' + error.message);
     });
+}
+
+// Function to show the company profile section
+function showCompanyProfile() {
+    const profileSection = document.getElementById('companyProfile');
+    profileSection.style.display = profileSection.style.display === 'none' ? 'block' : 'none';
 }
 </script>
 
