added plot of pichart, refresh to view, restart maintest.py to restart

--- a/ui_test.html
+++ b/ui_test.html
@@ -77,6 +77,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </style>
 </head>
 <body>
+<div class="chart">
+  <img src='job_skills_distribution.png'
+</div>
 <div class="main-container">
   <form class="form-container" onsubmit="submitForm(event)">
     <h1>Job scraper</h1>
