--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 </header>
 
 <nav>
-    <a href="ui_test.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
 </nav>
 
