--- a/ui_test.html
+++ b/ui_test.html
@@ -126,7 +126,7 @@ body {
   <h1>JobScout Pro</h1>
 </header>
 <nav>
-  <a href="ui_test.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="about.html">About us</a>
 </nav>
 <div class="main-container">
